@@ -1,9 +1,10 @@
 package org.belajar.blogmaven.controller;
 
 import org.belajar.blogmaven.entity.Post;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.bind.annotation.*;
+
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 @RestController
@@ -11,7 +12,7 @@ public class PostController {
 
     Post post1 = new Post(1, "title", "slug1");
     Post post2 = new Post(2, "title", "slug2");
-    List<Post> posts = List.of(post1, post2);
+    List<Post> posts = new ArrayList<>(Arrays.asList(post1, post2));
     @GetMapping("/")
     public List<Post> getPosts() {
         return posts;
@@ -20,5 +21,11 @@ public class PostController {
     @GetMapping("/{slug}")
     public Post getPostBySlug(@PathVariable("slug") String slug) {
         return posts.stream().filter(post -> post.getSlug().equals(slug)).findFirst().orElse(null);
+    }
+
+    @PostMapping("/")
+    public Post createPost(@RequestBody Post post) {
+        posts.add(post);
+        return post;
     }
 }
